@@ -1515,6 +1515,20 @@ class ETreeTestCaseBase(unittest.TestCase):
         self.assertEquals('Bar', b.text)
         self.assertEquals('Foo', a.text)
 
+    def test_shallowcopy(self):
+        Element = self.etree.Element
+        
+        a = Element('a')
+        a.text = 'Foo'
+
+        b = copy.copy(a)
+        self.assertEquals('Foo', b.text)
+        
+        b.text = 'Bar'
+        self.assertEquals('Bar', b.text)
+        self.assertEquals('Foo', a.text)
+        # XXX ElementTree will share nodes, but lxml.etree won't..
+        
     def test_element_boolean(self):
         etree = self.etree
         e = etree.Element('foo')
